CustomObjects/objects/invoiceit_s__Custom_Mappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This holds all the custom mappings between the product catalog and the quotes/orders. Say you create a custom field &apos;abc&apos; in product object that has to be mapped to custom field xyz in order product, this is the place to configure that.</description>
    <fields>
        <fullName>invoiceit_s__Category__c</fullName>
        <label>Category</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Destination_Object__c</fullName>
        <label>Destination Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Invoice IT Custom Mappings</label>
</CustomObject>